# CommunityDemoProject

Game/: CMakeLists.txt  backup.bat  do.bat  do.run.bat  gen.bat  run.bat  setenv.bat
Game/src/: App.cpp  App.h  CMakeLists.txt  Go.cpp  Go.h  radio.cpp  radio.h
Game/src/Camera/: AnimationCameraController.cpp  AnimationCameraController.h  CameraController.cpp  CameraController.h  CameraManager.cpp  CameraManager.h  DeathCameraController.cpp  DeathCameraController.h  DebugFPSCameraController.cpp  DebugFPSCameraController.h  ThirdPersonCameraController.cpp  ThirdPersonCameraController.h  TransitionCameraController.cpp  TransitionCameraController.h
Game/src/Cfg/: Cfg.cpp  Cfg.h  CfgManager.cpp  CfgManager.h
Game/src/Character/: Bruce.cpp  Bruce.h  Character.cpp  Character.h  CharacterStates.cpp  CharacterStates.h  EM_Helper.cpp  EM_Helper.h  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  FSM.cpp  FSM.h  PhysicsSensor.cpp  PhysicsSensor.h  Player.cpp  Player.h  PlayerCombat.cpp  PlayerCombat.h  PlayerMovement.cpp  PlayerMovement.h  Ragdoll.cpp  Ragdoll.h  Thug.cpp  Thug.h
Game/src/IMUI/: IMUI.cpp  IMUI.h  IMUIEvents.h
Game/src/Motions/: MotionManager.cpp  MotionManager.h  MotionRig.cpp  MotionRig.h  Motions.cpp  Motions.h
Game/src/Objects/: Follow.cpp  Follow.h  GameObject.cpp  GameObject.h  HeadIndicator.cpp  HeadIndicator.h  InputManager.cpp  InputManager.h  ObjectKiller.cpp  ObjectKiller.h  TextMenu.cpp  TextMenu.h
Game/src/States/: GameManager.cpp  GameManager.h  GameState.cpp  GameState.h  LevelState.cpp  LevelState.h  LoadingState.cpp  MainState.cpp  (+2 more)
(+4 files in other folders)
